--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -55,7 +55,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Retrieve service task definition
-        run: aws ecs describe-task-definition --task-definition activities-api --query taskDefinition > task-definition.json
+        run: aws ecs describe-task-definition --task-definition activities-api-rc --query taskDefinition > task-definition.json
 
       - name: Render Amazon ECS task definition
         id: render-activities-api
